--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </head>
     <body>
         <h1>To See (你想看哪个)</h1>
-        <a href="en/index.html">English</a>
+        English
         <a href="cn/index.html">中文</a>
     </body>
 </html>
